--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/phungkhaccuong/git_company#readme",
   "dependencies": {
     "chai": "^4.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.29.1"
   }
 }
